--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,13 @@
 cmake_minimum_required (VERSION 3.0.2)
-project (fdas3)
+project (fdas)
 
 if(CMAKE_COMPILER_IS_GNUCC)
   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++14")
 endif()
 
+include_directories("${CMAKE_CURRENT_SOURCE_DIR}")
 
-add_subdirectory(utils)
+add_subdirectory(common)
 add_subdirectory(devices)
-add_subdirectory(scripts)
+#add_subdirectory(scripts)
