Added TextFileDataSink and basic program options.

--- a/devices/gps/CMakeLists.txt
+++ b/devices/gps/CMakeLists.txt
@@ -1,2 +1,4 @@
 add_executable(gps-read gps-read.cpp $<TARGET_OBJECTS:common>)
+target_link_libraries(gps-read boost_program_options boost_log)
+
 install(TARGETS gps-read DESTINATION bin)
