--- a/devices/iio/CMakeLists.txt
+++ b/devices/iio/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_executable(iio-read iio-read.cpp $<TARGET_OBJECTS:common>)
-target_link_libraries(iio-read boost_program_options boost_log)
+target_link_libraries(iio-read ${Boost_LIBRARIES})
 
 install(TARGETS iio-read DESTINATION bin)
